# rust-checkers

./: Cargo.toml  README.md
src/: args.rs  channel.rs  main.rs
src/backend/: ai.rs  args.rs  board.rs  game.rs  mod.rs  player.rs
src/frontend/: args.rs  board.rs  curses_frontend.rs  cursor_input.rs  log.rs  menu.rs  mod.rs  window.rs
