[package]
name = "checkers"
version = "0.1.0"
authors = ["Tim Sanders <tsanders@tradebot.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.0"
rand = "0.7"

[dependencies.pancurses]
version = "0.16"
features = ["wide"] # Enable unicode characters in curses output
